<resources>
    <string name="app_name">GameTetris</string>

    <string name="title_activity_home">Tetris</string>
    <string name="dummy_content">TETRIS</string>
    <string name="points_label">Pontos: 0</string>
    <string name="part_label">Proxima</string>
    <string name="new_game_label">Novo jogo</string>
    <string name="resume_label">Continuar</string>
    <string name="config_label">Configurar</string>
    <string name="game_name">Tetris</string>
    <string name="settings_title">Configuracao</string>
    <string name="game_mode">Dificuldade</string>
    <string name="part_number_label">Numero de pecas</string>
    <string name="game_over" translatable="false">Game Over!</string>
    <string name="record_label" translatable="false">Record:</string>
    <string name="new_record">Novo record:</string>
    <string name="points_text">Pontuacao:</string>
    <string name="exit_label">Sair</string>
</resources>
